--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,23 @@
 language: go
 
 go:
-  - "1.14.x"
-  - "1.13.x"
-  - "1.12.x"
-  - "1.11.x"
-  - "1.10.x"
-  - "1.9.x"
   - "1.8.x"
+  - "1.9.x"
+  - "1.10.x"
+  - "1.11.x"
+  - "1.12.x"
+  - "1.13.x"
+  - "1.14.x"
+
+compiler: go
+
+os: 
+  - linux
+  - osx
+
+arch:
+  - amd64
+  - arm64
 
 notifications:
   email: false
