--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,20 @@ jobs:
       matrix:
         go-version: [1.8.x, 1.9.x, 1.10.x, 1.11.x, 1.12.x, 1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x, 1.18.x, 1.19.x]
         os:  [ubuntu-latest, windows-latest, macos-latest]
+        exclude:
+          - os: macos-latest
+            go-version: 1.8.x
+          - os: macos-latest
+            go-version: 1.9.x
+          - os: macos-latest
+            go-version: 1.10.x
+        include:
+          - os: macos-11
+            go-version: 1.8.x
+          - os: macos-11
+            go-version: 1.9.x
+          - os: macos-11
+            go-version: 1.10.x
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -30,7 +44,7 @@ jobs:
         cp -r $GOROOT/src/cmd/internal $GOROOT/src/cmd/objfile
         
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         path: ${{ env.GOPATH }}/src/github.com/${{ github.repository }}
       
