--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: [1.8.x, 1.9.x, 1.10.x, 1.11.x, 1.12.x, 1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x, 1.18.x, 1.19.x]
+        go-version: [1.8.x, 1.9.x, 1.10.x, 1.11.x, 1.12.x, 1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x, 1.18.x, 1.19.x, 1.20.x]
         os:  [ubuntu-latest, windows-latest, macos-latest]
         exclude:
           - os: macos-latest
@@ -34,14 +34,14 @@ jobs:
 
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
         
     - name: Rename cmd/internal
       shell: sh
       run:         
-        cp -r $GOROOT/src/cmd/internal $GOROOT/src/cmd/objfile
+        cp -r `go env GOROOT`/src/cmd/internal `go env GOROOT`/src/cmd/objfile
         
     - name: Checkout code
       uses: actions/checkout@v3
@@ -54,13 +54,23 @@ jobs:
         
     - name: Compile const.go
       shell: sh
-      run:
-        go tool compile $GOPATH/src/github.com/pkujhd/goloader/examples/const/const.go
+      run: |
+        if [ `echo ${{ matrix.go-version }} | cut -d'.' -f2` -ge 20 ]; then
+          go list -export -f '{{if .Export}}packagefile {{.ImportPath}}={{.Export}}{{end}}' std `go list -f {{.Imports}} $GOPATH/src/github.com/pkujhd/goloader/examples/const/const.go | awk '{sub(/^\[/, ""); print }' | awk '{sub(/\]$/, ""); print }'` > importcfg
+          go tool compile -importcfg importcfg $GOPATH/src/github.com/pkujhd/goloader/examples/const/const.go
+        else
+          go tool compile $GOPATH/src/github.com/pkujhd/goloader/examples/const/const.go
+        fi
         
     - name: Compile base.go
       shell: sh
-      run:
-        go tool compile $GOPATH/src/github.com/pkujhd/goloader/examples/base/base.go
+      run: |
+        if [ `echo ${{ matrix.go-version }} | cut -d'.' -f2` -ge 20 ]; then
+          go list -export -f '{{if .Export}}packagefile {{.ImportPath}}={{.Export}}{{end}}' std `go list -f {{.Imports}} $GOPATH/src/github.com/pkujhd/goloader/examples/base/base.go | awk '{sub(/^\[/, ""); print }' | awk '{sub(/\]$/, ""); print }'` > importcfg
+          go tool compile -importcfg importcfg $GOPATH/src/github.com/pkujhd/goloader/examples/base/base.go
+        else
+          go tool compile $GOPATH/src/github.com/pkujhd/goloader/examples/base/base.go
+        fi
         
     - name: Test base.o
       run: 
