--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,29 +14,29 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: [1.8.x, 1.9.x, 1.10.x, 1.11.x, 1.12.x, 1.13.x, 1.14.x, 1.15.x, 1.16.x, 1.17.x, 1.18.x, 1.19.x, 1.20.x]
+        go-second-version: [8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
         os:  [ubuntu-latest, windows-latest, macos-latest]
         exclude:
           - os: macos-latest
-            go-version: 1.8.x
+            go-second-version: 8
           - os: macos-latest
-            go-version: 1.9.x
+            go-second-version: 9
           - os: macos-latest
-            go-version: 1.10.x
+            go-second-version: 10
         include:
           - os: macos-11
-            go-version: 1.8.x
+            go-second-version: 8
           - os: macos-11
-            go-version: 1.9.x
+            go-second-version: 9
           - os: macos-11
-            go-version: 1.10.x
+            go-second-version: 10
     runs-on: ${{ matrix.os }}
 
     steps:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: 1.${{ matrix.go-second-version }}.x
         
     - name: Rename cmd/internal
       shell: sh
@@ -55,7 +55,7 @@ jobs:
     - name: Compile const.go
       shell: sh
       run: |
-        if [ `echo ${{ matrix.go-version }} | cut -d'.' -f2` -ge 20 ]; then
+        if [ ${{ matrix.go-second-version }} -ge 20 ]; then
           go list -export -f '{{if .Export}}packagefile {{.ImportPath}}={{.Export}}{{end}}' std `go list -f {{.Imports}} $GOPATH/src/github.com/pkujhd/goloader/examples/const/const.go | awk '{sub(/^\[/, ""); print }' | awk '{sub(/\]$/, ""); print }'` > importcfg
           go tool compile -importcfg importcfg $GOPATH/src/github.com/pkujhd/goloader/examples/const/const.go
         else
@@ -65,7 +65,7 @@ jobs:
     - name: Compile base.go
       shell: sh
       run: |
-        if [ `echo ${{ matrix.go-version }} | cut -d'.' -f2` -ge 20 ]; then
+        if [ ${{ matrix.go-second-version }} -ge 20 ]; then
           go list -export -f '{{if .Export}}packagefile {{.ImportPath}}={{.Export}}{{end}}' std `go list -f {{.Imports}} $GOPATH/src/github.com/pkujhd/goloader/examples/base/base.go | awk '{sub(/^\[/, ""); print }' | awk '{sub(/\]$/, ""); print }'` > importcfg
           go tool compile -importcfg importcfg $GOPATH/src/github.com/pkujhd/goloader/examples/base/base.go
         else
