--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         go-version: [ 1.18.x, 1.19.x, 1.20.x ]
-        os:  [ubuntu-latest, windows-latest, macos-latest]
+        os:  [ubuntu-latest, windows-latest, macos-latest, [self-hosted, Linux, ARM64], [self-hosted, macOS, ARM64]]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -32,7 +32,7 @@ jobs:
     - name: Patch gc
       shell: sh
       run:
-        go run github.com/eh-steve/goloader/jit/patchgc@WIP---Update-github-actions-to-run-tests
+        go run github.com/eh-steve/goloader/jit/patchgc@6a96384
 
     - name: Checkout code
       uses: actions/checkout@v3
