--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         go-version: [ 1.18.X, 1.19.X, 1.20.X ]
         os:  [ubuntu-latest, windows-latest, macos-latest, [self-hosted, Linux, ARM64], [self-hosted, macOS, ARM64]]
+        cgo-enabled: ["CGO_ENABLED=0", "CGO_ENABLED=1"]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -44,4 +45,4 @@ jobs:
     - name: Test
       shell: sh
       run:
-        cd $GOPATH/src/github.com/eh-steve/goloader/jit && go test -c . && ./jit.test -test.v
+        cd $GOPATH/src/github.com/eh-steve/goloader/jit && export ${{ matrix.cgo-enabled }} && go test -c . && ./jit.test -test.v
