--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,9 @@ jobs:
         go-version: [ 1.18.X, 1.19.X, 1.20.X ]
         os:  [ubuntu-latest, windows-latest, macos-latest, [self-hosted, Linux, ARM64], [self-hosted, macOS, ARM64]]
         cgo-enabled: ["CGO_ENABLED=0", "CGO_ENABLED=1"]
+        exclude:
+          - os: [self-hosted, macOS, ARM64]
+            cgo-enabled: "CGO_ENABLED=0"
     runs-on: ${{ matrix.os }}
 
     steps:
