--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,6 +17,7 @@ jobs:
         go-version: [ 1.18.X, 1.19.X, 1.20.X ]
         os:  [ubuntu-latest, windows-latest, macos-latest, [self-hosted, Linux, ARM64], [self-hosted, macOS, ARM64]]
         cgo-enabled: ["CGO_ENABLED=0", "CGO_ENABLED=1"]
+        dynlink: ["JIT_GC_DYNLINK=1", "JIT_GC_DYNLINK=0"]
         exclude:
           - os: [self-hosted, macOS, ARM64]
             cgo-enabled: "CGO_ENABLED=0"
@@ -48,4 +49,4 @@ jobs:
     - name: Test
       shell: sh
       run:
-        cd $GOPATH/src/github.com/eh-steve/goloader/jit && export ${{ matrix.cgo-enabled }} && go test -c . && ./jit.test -test.v
+        cd $GOPATH/src/github.com/eh-steve/goloader/jit && export ${{ matrix.cgo-enabled }} ${{ matrix.dynlink }} && go test -c . && ./jit.test -test.v
