Update CALL relocs - try JMP (to epilogue) then CALL (target func) then JMP (back from epilogue) instead of CALL (into epilogue) then JMP (into target func), since if a traceback hits while we're in the epilogue, the funcForPC for the current PC will not be aligned with the link register (regardless whether the LR is virtual or real), and it will appear that the callee and caller are the same `_func`

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: [ 1.18.X, 1.19.X, 1.20.X , 1.21.0-rc.3 ]
+        go-version: [ 1.18.X, 1.19.X, 1.20.X , 1.21.X ]
         os:  [ubuntu-latest, windows-latest, macos-latest, [self-hosted, Linux, ARM64], [self-hosted, macOS, ARM64]]
         cgo-enabled: ["CGO_ENABLED=0", "CGO_ENABLED=1"]
         dynlink: ["JIT_GC_DYNLINK=1", "JIT_GC_DYNLINK=0"]
