--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,16 @@ jobs:
             go-second-version: 9
           - os: macos-latest
             go-second-version: 10
+          - os: macos-latest
+            go-second-version: 11
+          - os: macos-latest
+            go-second-version: 12
+          - os: macos-latest
+            go-second-version: 13
+          - os: macos-latest
+            go-second-version: 14
+          - os: macos-latest
+            go-second-version: 15
         include:
           - os: macos-11
             go-second-version: 8
@@ -30,6 +40,16 @@ jobs:
             go-second-version: 9
           - os: macos-11
             go-second-version: 10
+          - os: macos-11
+            go-second-version: 11
+          - os: macos-11
+            go-second-version: 12
+          - os: macos-11
+            go-second-version: 13
+          - os: macos-11
+            go-second-version: 14
+          - os: macos-11
+            go-second-version: 15
     runs-on: ${{ matrix.os }}
 
     steps:
